# discord-bot

./: pyproject.toml
discord_bot/: main.py
